Dependencies: Substitute pip-compile with uv

--- a/requirements/requirements.dev.in
+++ b/requirements/requirements.dev.in
@@ -14,4 +14,4 @@ pydoc-markdown==4.8.2                                       # Used for generatin
 sh==2.0.7                                                   # Convenience library for running subprocesses in Python
 apispec==6.6.1                                              # Generate OpenApi definition out of pydoc comments
 apispec-webframeworks                                       # Integration of apispec in Flask
-pip-tools==7.4.1                                            # Generate requirements files with pinned dependencies
+uv==0.2.33                                                  # Generate requirements files with pinned dependencies
