--- a/.github/workflows/autotest.yml
+++ b/.github/workflows/autotest.yml
@@ -184,3 +184,7 @@ jobs:
           echo "images=$IMAGES" >> $GITHUB_OUTPUT
       - name: Run test with cfg
         run: 'echo ''{"matrix": ${{ toJson(matrix.cfg) }}, "images": ${{ steps.images.outputs.images }} }'' | ./tools/test/run_tests.py'
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
