--- a/.github/workflows/integration_tests.yml
+++ b/.github/workflows/integration_tests.yml
@@ -126,55 +126,55 @@ jobs:
           docker exec -t dev_rucio_1 cp etc/rse-accounts.cfg.template etc/rse-accounts.cfg
           docker exec -t dev_rucio_1 tools/run_tests.sh -ir
       - name: File Upload/Download Test
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rucio_server.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rucio_server.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: UploadClient Test
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_upload.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_upload.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: File Upload/Download Test using 'impl' parameter
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_impl_upload_download.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_impl_upload_download.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test gfal2 implementation on xrootd protocol
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rse_protocol_gfal2_impl.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rse_protocol_gfal2_impl.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test Protocol XrootD
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rse_protocol_xrootd.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rse_protocol_xrootd.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test Protocol SSH (scp)
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rse_protocol_ssh.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rse_protocol_ssh.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test Protocol Rsync
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rse_protocol_rsync.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rse_protocol_rsync.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test Protocol Rclone
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_rse_protocol_rclone.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_rse_protocol_rclone.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test Conveyor
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_conveyor.py
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_conveyor.py
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
@@ -183,7 +183,7 @@ jobs:
         id: tpc
         shell: bash
         run: |
-          docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short --export-artifacts-from="test_tpc" tests/test_tpc.py
+          docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short --export-artifacts-from="test_tpc" tests/test_tpc.py
           FTS_LOG_FILE=$(docker exec -t dev_rucio_1 cat /tmp/test_tpc.artifact)
           echo "fts3log=$FTS_LOG_FILE" >> $GITHUB_OUTPUT
       - name: Upload coverage reports to Codecov
@@ -202,7 +202,7 @@ jobs:
             exit 1
           fi
       - name: Test Token Deletion
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_reaper.py::test_deletion_with_tokens
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_reaper.py::test_deletion_with_tokens
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
@@ -213,19 +213,19 @@ jobs:
         run: |
           docker exec -t dev_rucio_1 cat /var/log/rucio/httpd_error_log
       - name: Archive Upload/Download Test
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_download.py::test_download_from_archive_on_xrd
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_download.py::test_download_from_archive_on_xrd
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test external metadata plugin (mongo)
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_did_meta_plugins.py::TestDidMetaMongo
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_did_meta_plugins.py::TestDidMetaMongo
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
           token: ${{ secrets.CODECOV_TOKEN }}
       - name: Test external metadata plugin (postgres)
-        run: docker exec -t dev_rucio_1 tools/pytest.sh -v --tb=short tests/test_did_meta_plugins.py::TestDidMetaExternalPostgresJSON
+        run: docker exec -t dev_rucio_1 tools/pytest.sh -p pytest_cov --cov=lib/rucio --cov-report xml -v --tb=short tests/test_did_meta_plugins.py::TestDidMetaExternalPostgresJSON
       - name: Upload coverage reports to Codecov
         uses: codecov/codecov-action@v4.0.1
         with:
