--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,4 +1,11 @@
 repos:
+- repo: https://github.com/alessandrojcm/commitlint-pre-commit-hook
+  rev: v9.16.0
+  hooks:
+      - id: commitlint
+        name: Lint commit message
+        stages: [commit-msg]
+        additional_dependencies: ['@commitlint/config-conventional']
 - repo: https://github.com/pre-commit/pre-commit-hooks
   rev: v2.3.0
   hooks:
